# caleidoscope

./: .gitmodules  CMakeLists.txt  README.md  flash.sh  main.cpp
src/plugins/: IQueue.cpp  IQueue.h  TapMod.cpp  TapMod.h
src/sketch/: timnn.cpp
tests/: FakeKeyboardBaseTest.cpp  FakeKeyboardBaseTest.h  IQueueTest.cpp  TapModTest.cpp  main.cpp
